# qt-sensors-mpu6050

./: CMakeLists.txt  README.md  qi2cdevice.cpp  qi2cdevice.h  qmpu6050.cpp  qmpu6050.h  qmpu6050_global.h  qmpu6050_p.h  qmpu6050accelerometerbackend.cpp  qmpu6050accelerometerbackend.h  qmpu6050backend.cpp  qmpu6050backend.h  qmpu6050gyroscopebackend.cpp  qmpu6050gyroscopebackend.h  qmpu6050plugin.h
